@@ -8,9 +8,9 @@ import us.lsi.gurobi.GurobiSolution;
 
 public class TestGurobi {
 	
-	public static void main(String[] args) {
-		Locale.setDefault(new Locale("en", "US"));
-		GurobiSolution solution = GurobiLp.gurobi("ficheros/gurobi_example_1.lp");
+	public static void test(String file) {
+		Locale.setDefault(Locale.of("en", "US"));
+		GurobiSolution solution = GurobiLp.gurobi(file);
 		System.out.println("\n\n\n\n");
 		System.out.println(String.format("Objetivo : %.2f",solution.objVal));
 		System.out.println("\n\n");
@@ -21,6 +21,10 @@ public class TestGurobi {
 				.map(e->String.format("%s == %.1f, %.1f, %.1f",e,solution.values.get(e),
 						solution.values.get(e)+1,solution.values.get(e)-1))
 				.collect(Collectors.joining("\n")));
+	}
+	
+	public static void main(String[] args) {
+		test("ficheros/gurobi.lp");
 	}
 
 }
